<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MY JOB APPLICATION</string>
    <string name="add_contacts_button_text">Add Contact</string>
    <string name="add_sender_info_label">Add Sender Information</string>

    <!-- Contact Fragment strings -->
    <string name="first_name_label">First Name&#42;:</string>
    <string name="last_name_label">Last Name&#42;:</string>
    <string name="email_address_label">Email Address&#42;:</string>
    <string name="company_label">Company:</string>
    <string name="location_label">Location:</string>
    <string name="add_button_text">ADD</string>
    <string name="cancel_button_text">CANCEL</string>
    <string name="confirm_button_text">CONFIRM</string>

    <!-- Workflow selection strings -->
    <string name="manage_templates">Manage Templates</string>
    <string name="send_email">Send Email</string>
    <string name="manage_contacts">Manage Contacts</string>
</resources>
