<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/text_entry_margin"
    android:layout_marginEnd="@dimen/text_entry_margin"
    android:layout_marginTop="@dimen/text_entry_margin"
    android:layout_marginBottom="@dimen/text_entry_margin">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- First Name-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/first_name_label"
            style="@style/text_label_style1"/>
        <TextView
            android:id="@+id/tv_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_value_style1"/>
        <!-- Last Name-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/last_name_label"
            style="@style/text_label_style1"/>
        <TextView
            android:id="@+id/tv_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_value_style1"
            />
        <!-- Company Name-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            style="@style/text_label_style1"
            android:text="@string/company_label"/>
        <TextView
            android:id="@+id/tv_company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_value_style1"/>
        <!-- Location -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            style="@style/text_label_style1"
            android:text="@string/location_label"/>
        <TextView
            android:id="@+id/tv_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            style="@style/text_value_style1"/>
        <!-- Email id-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            style="@style/text_label_style1"
            android:text="@string/email_address_label"/>
        <TextView
            android:id="@+id/tv_email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            style="@style/text_value_style1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/button_confirm_summary_contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm_button_text"
            android:layout_marginRight="5dp"
            style="@style/button_theme1"/>
        <Button
            android:id="@+id/button_cancel_summary_contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_button_text"
            android:layout_marginLeft="5dp"
            style="@style/button_theme1"/>
    </LinearLayout>
</RelativeLayout>