<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/send_email"
            style="@style/button_theme1"
            android:text="@string/send_email"
            android:gravity="center_horizontal"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/text_button_margin"/>

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/manage_templates"
            style="@style/button_theme1"
            android:text="@string/manage_templates"
            android:gravity="center_horizontal"
            android:layout_above="@id/send_email"
            android:layout_margin="@dimen/text_button_margin"/>


    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/manage_contacts"
            style="@style/button_theme1"
            android:text="@string/manage_contacts"
            android:gravity="center_horizontal"
            android:layout_below="@id/send_email"
            android:layout_margin="@dimen/text_button_margin"/>
</RelativeLayout>